--- a/home.html
+++ b/home.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+e<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -11,7 +11,7 @@
 </head>
 <body>
     <nav class="navbar">
-      <img src="./Assests/logo.svg" alt="logo">
+      <img src="./sceneAssests/logo.svg" alt="logo">
       <div class="right-nav">
       <label class="switch">
         <input type="checkbox"   id="switch" checked>
