--- a/music.html
+++ b/music.html
@@ -12,7 +12,7 @@
 </head>
 <body id="music-body">
     <nav class="navbar">
-        <img src="./musicAssests/logo.svg" alt="logo">
+        <img src="./sceneAssests/logo.svg" alt="logo">
         <div class="right-nav">
         <label class="switch">
           <input type="checkbox"   id="switch" checked>
