--- a/scene.html
+++ b/scene.html
@@ -96,7 +96,7 @@
                       <div class="sunset-content">
                         <i class="fas fa-times exit-video"></i>
                         <video loop class="video-container-sunset">
-                          <source src="sunset-lake.mp4" type="video/mp4" />
+                          <source src="./sceneAssests/sunset-lake.mp4" type="video/mp4" />
                         </video>
                         <audio class="video-audio">
                           <source src="./audioAssests/Sonder(chosic.com) (1).mp3" />
@@ -128,7 +128,7 @@
                       <div class="ocean-content">
                         <i class="fas fa-times exit-video-ocean"></i>
                         <video muted loop class="video-container-ocean">
-                          <source src="river.mp4" type="video/mp4" />
+                          <source src="./sceneAssests/river.mp4" type="video/mp4" />
                         </video>
                         <audio class="video-audio-ocean">
                           <source src="./audioAssests/Sonder(chosic.com) (1).mp3" />
@@ -161,7 +161,7 @@
                       <div class="rain-content">
                         <i class="fas fa-times exit-video-rain"></i>
                         <video muted loop class="video-container-rain">
-                          <source src="rain.mp4" type="video/mp4" />
+                          <source src="./sceneAssests/rain.mp4" type="video/mp4" />
                         </video>
                         <audio class="video-audio-rain">
                           <source src="./audioAssests/Sonder(chosic.com) (1).mp3" />
@@ -193,7 +193,7 @@
                       <div class="fall-content">
                         <i class="fas fa-times exit-video-fall"></i>
                         <video muted loop class="video-container-fall">
-                          <source src="fall.mp4" type="video/mp4" />
+                          <source src="./sceneAssests/fall.mp4" type="video/mp4" />
                         </video>
                         <audio class="video-audio-fall">
                           <source src="./audioAssests/AtTheEndOfAllThings-chosic.com_.mp3" />
@@ -226,7 +226,7 @@
                       <div class="snow-content">
                         <i class="fas fa-times exit-video-snow"></i>
                         <video muted loop class="video-container-snow">
-                          <source src="snow.mp4" type="video/mp4" />
+                          <source src="./sceneAssests/snow.mp4" type="video/mp4" />
                         </video>
                         <audio class="video-audio-snow">
                           <source src="./audioAssests/Memories-of-Spring(chosic.com).mp3" />
@@ -259,7 +259,7 @@
           <div class="ice-content">
             <i class="fas fa-times exit-video-ice"></i>
             <video muted loop class="video-container-ice">
-              <source src="ice-lake.mp4" type="video/mp4" />
+              <source src="./sceneAssests/ice-lake.mp4" type="video/mp4" />
             </video>
             <audio class="video-audio-ice">
               <source src="./audioAssests/Memories-of-Spring(chosic.com).mp3" />
